--- a/index.html
+++ b/index.html
@@ -23,21 +23,18 @@
 
     <main>
 
-        <section class="notice">
-            <p>
-                This site contains personal writings and commentary.
-                Entries are arranged chronologically and reflect ongoing work and study.
-            </p>
-        </section>
+        <section class="index-grid">
 
-        <section id="recent-entries" class="content-section">
-            <h2>Recent Entries</h2>
-            <div id="list-container" data-type="posts"></div>
-        </section>
+            <div class="folio folio-entries">
+                <h2>Recent Entries</h2>
+                <div class="card-grid" id="list-container" data-type="posts"></div>
+            </div>
 
-        <section id="recent-miscellanea" class="content-section">
-            <h2>Miscellanea</h2>
-            <div id="list-container" data-type="extras"></div>
+            <div class="folio folio-misc">
+                <h2>Miscellanea</h2>
+                <div class="card-grid" id="list-container" data-type="extras"></div>
+            </div>
+
         </section>
 
     </main>
