--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
     </header>
 
     <main>
-
-        <section class="index-grid">
-
-            <div class="folio folio-entries">
-                <h2>Recent Entries</h2>
-                <div class="card-grid" id="list-container" data-type="posts"></div>
-            </div>
-
-            <div class="folio folio-misc">
-                <h2>Miscellanea</h2>
-                <div class="card-grid" id="list-container" data-type="extras"></div>
-            </div>
-
+        <section class="notice">
+            <p>
+                This site contains personal writings and historical commentary.
+                Entries are arranged chronologically and reflect ongoing work and study.
+            </p>
         </section>
 
+        <section class="index-grid">
+            <div class="folio folio-entries">
+                <h2>Recent Entries</h2>
+                <div class="card-grid" data-type="posts"></div>
+            </div>
+            <div class="folio folio-misc">
+                <h2>Miscellanea</h2>
+                <div class="card-grid" data-type="extras"></div>
+            </div>
+        </section>
     </main>
 
     <footer class="imprint">
