--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         </section>
 
         <section class="index-grid">
-            <div class="folio folio-entries">
+            <div class="folio">
                 <h2>Recent Entries</h2>
-                <div class="card-grid" data-type="posts"></div>
+                <div id="latest-posts" data-type="posts" class="card-grid"></div>
             </div>
-            <div class="folio folio-misc">
+            <div class="folio">
                 <h2>Miscellanea</h2>
-                <div class="card-grid" data-type="extras"></div>
+                <div id="latest-extras" data-type="extras" class="card-grid"></div>
             </div>
         </section>
     </main>
