--- a/about.html
+++ b/about.html
@@ -4,65 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About – Estariot</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css" />
 </head>
 <body data-theme="light">
 
-<header>
-    <h1>About</h1>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="posts.html">Posts</a>
-        <a href="extras.html">Extras</a>
-        <a href="about.html">About</a>
-    </nav>
-    <button id="theme-toggle" class="theme-btn">Dark Mode</button>
-</header>
+    <header class="masthead">
+        <h1>ESTARIOT</h1>
+        <p class="subtitle">
+            Notes on mineself, histories, and related matters
+        </p>
 
-<main>
-    <section class="content-section narrow">
-        <h2>A note to the reader;</h2>
+        <nav class="primary-nav">
+            <a href="index.html">Index</a>
+            <a href="posts.html">Entries</a>
+            <a href="extras.html">Miscellanea</a>
+            <a href="about.html" class="active">About</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="content-section narrow">
+            <h2>A note to the reader;</h2>
+            <p>
+                Hello there!
+                This is a site intended to be like a notebook for me, somewhere I can do
+                whatever the hell I want, like exploring and expanding my interests, with
+                a minor caveat, that it's entirely open to the public to view.
+            </p>
+
+            <h2>On the author</h2>
+            <p>
+                I'm Estariot, or maybe you know me by 'NOIDLAND', whichever the case is,
+                I'm just another fellow who wants to be creative, and follow his aspirations.
+                As of January '26, I'm still a high school student, but I intend to maintain
+                and continue developing this site for a long, long time.
+            </p>
+
+            <h2>What I do, or want to do</h2>
+            <ul>
+                <li>Historical analysis</li>
+                <li>Conlangs, worldbuilding</li>
+                <li>Guides of all sorts of things</li>
+                <li>Occasional self reflections</li>
+            </ul>
+
+            <h2>Contact</h2>
+            <p>
+                You can reach me through:
+            </p>
+            <ul>
+                <li>GitHub: <a href="https://github.com/tug-g">tug-g</a></li>
+                <li>GitHub: <a href="https://github.com/estariot">Estariot</a></li>
+                <li>Email: <span class="mono">tuguldurganbold09@gmail.com</span></li>
+                <li>Email: <span class="mono">saeferia@gmail.com</span></li>
+                <li>Youtube: <a href="https://www.youtube.com/@noidland">NOIDLAND</a></li>
+            </ul>
+
+            <p class="muted">
+                yoyoyoyo, g'day to you
+            </p>
+        </section>
+    </main>
+
+    <footer class="imprint">
         <p>
-            Hello there!
-            This is a site intended to be like a notebook for me, somewhere I can do
-            whatever the hell I want, like exploring and expanding my interests, with
-            a minor caveat, that it's entirely open to the public to view.
+            Estariot · Compiled and maintained by H.
         </p>
+    </footer>
 
-        <h2>On the author</h2>
-        <p>
-            I'm Estariot, or maybe you know me by 'NOIDLAND', whichever the case is,
-            I'm just another fellow who wants to be creative, and follow his aspirations.
-            As of January '26, I'm still a high school student, but I intend to maintain
-            and continue developing this site for a long, long time.
-        </p>
-
-        <h2>What I do, or want to do</h2>
-        <ul>
-            <li>Historical analysis</li>
-            <li>Conlangs, worldbuilding</li>
-            <li>Guides of all sorts of things</li>
-            <li>Occasional self reflections</li>
-        </ul>
-
-        <h2>Contact</h2>
-        <p>
-            You can reach me through:
-        </p>
-        <ul>
-            <li>GitHub: <a href="https://github.com/tug-g">tug-g</a></li>
-            <li>GitHub: <a href="https://github.com/estariot">Estariot</a></li>
-            <li>Email: <span class="mono">tuguldurganbold09@gmail.com</span></li>
-            <li>Email: <span class="mono">saeferia@gmail.com</span></li>
-            <li>Youtube: <a href="https://www.youtube.com/@noidland">NOIDLAND</a></li>
-        </ul>
-
-        <p class="muted">
-            yoyoyoyo, g'day to you
-        </p>
-    </section>
-</main>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
